--- a/index.html
+++ b/index.html
@@ -14,5 +14,30 @@
     <h4>This is heading 4</h4>
     <h5>This is heading 5</h5>
     <h6>This is heading 6</h6>
+
+    <!-- paragraph -->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi rerum doloribus esse, libero veniam maxime quod dolore illo architecto ex quaerat ea iusto suscipit, dignissimos accusantium hic, molestias aut excepturi optio! Sunt, atque sed. Mollitia quasi praesentium temporibus ab voluptatum sint harum tempore nihil excepturi, iusto nemo veniam quod error.</p>
+
+    <!-- div and span -->
+    <div class="fuad">
+        <p>Lorem ipsum dolor sit amet <span style="color: red;">consectetur</span> adipisicing elit. Quidem, dicta aperiam sequi eligendi expedita molestiae laboriosam dolores laudantium alias a adipisci voluptatibus incidunt impedit sed voluptas quam. Dicta mollitia maiores nobis, voluptates magnam iusto accusamus sit saepe amet explicabo natus!</p>
+    </div>
+
+    <!-- bold -->
+    <b>This is bold text</b> <br>
+    <strong>This is bold text</strong> <br><br>
+
+    <!-- italic -->
+    <i>This is an italic text</i> <br>
+    <em>This is an italic text</em> <br>
+    <cite>This is an italic text</cite> <br>
+    <dfn>This is an italic text</dfn> <br><br>
+
+    <!-- underlined -->
+    <u>This is an underlined text</u> <br>
+    <ins>This is an underlined text</ins> <br><br>
+
+    <!-- sup -->
+    
 </body>
 </html>
