--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML</title>
 </head>
-<body>
+
+<body style="padding-bottom: 200px;">
     <!-- heading -->
     <h1>This is heading 1</h1>
     <h2>This is heading 2</h2>
@@ -16,7 +18,8 @@
     <h6>This is heading 6</h6>
 
     <!-- paragraph -->
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi rerum doloribus esse, libero veniam maxime quod dolore illo architecto ex quaerat ea iusto suscipit, dignissimos accusantium hic, molestias aut excepturi optio! Sunt, atque sed. Mollitia quasi praesentium temporibus ab voluptatum sint harum tempore nihil excepturi, iusto nemo veniam quod error.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi rerum doloribus esse, libero veniam maxime quod dolore illo architecto ex quaerat ea iusto suscipit, dignissimos accusantium hic, molestias aut excepturi optio! Sunt, atque sed. Mollitia
+        quasi praesentium temporibus ab voluptatum sint harum tempore nihil excepturi, iusto nemo veniam quod error.</p>
 
     <!-- div and span -->
     <div class="fuad">
@@ -38,6 +41,82 @@
     <ins>This is an underlined text</ins> <br><br>
 
     <!-- sup -->
-    
+    <p>a<sup>2</sup> + b<sup>2</sup></p>
+
+    <!-- sub -->
+    <p>H<sub>2</sub>O</p>
+
+    <!-- horizontal rule -->
+    <hr>
+
+    <!-- anchor -->
+    <a href="https://www.w3schools.com/" target="_blank">Click Here</a>
+
+    <!-- img -->
+    <p>
+        <img src="./images/bird.jpg" alt="bird-image">
+    </p>
+
+    <!-- pre -->
+    <p>
+        <pre>
+            I was born with a
+            fragile heart
+            It's see-through
+            almost glass
+            Which is why you can see
+            Every emotion on my face
+            No matter what angle you look at me
+        </pre>
+    </p>
+
+    <!-- del -->
+    <p>
+        <del>Bangladesh</del> <br>
+        <s>Bangladesh</s>
+    </p>
+
+    <!-- mark , abbr , bdo -->
+    <p>
+        My name is <mark>Mostafizur</mark> <br>
+        <abbr title="Bangladesh">BD</abbr> is a small country <br>
+        <bdo dir="rtl">Mostafizur Rahman Fuad</bdo> 
+    </p>
+
+    <!-- address -->
+    <p>
+        <address>
+            Brac Alamdanga branch, Nowda, 70, Bondobil 7210 <br>
+            Alamdanga, Chuadanga.
+        </address>
+    </p>
+
+    <!-- iframe show website -->
+    <iframe src="https://www.daraz.com.bd/" width="100%" height="600"  frameborder="0"></iframe>
+
+    <br>
+    <br>
+
+    <!-- iframe - show youtube video -->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/1PPfOzQtLfY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    <br>
+    <br>
+
+    <!-- video -->
+    <video width="320" height="240" controls autoplay>
+        <source src="./media/mov_bbb.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
+    <br>
+    <br>
+
+    <!-- audio -->
+    <audio controls autoplay>
+        <source src="./media/sound.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 </body>
+
 </html>
