--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML</title>
+    <script src="https://kit.fontawesome.com/95fdc1ecce.js" crossorigin="anonymous"></script>
 </head>
 
 <body style="padding-bottom: 200px;">
@@ -323,6 +324,19 @@
     <!-- q -->
     <p>
         <q>The purpose of our lives is to be happy.</q>
+    </p>
+
+
+    <!-- font awesome -->
+    <!-- 
+        1. <script src="https://kit.fontawesome.com/95fdc1ecce.js" crossorigin="anonymous"></script>  (place the link in head tag)
+        2. https://fontawesome.com/search  (search icon) 
+    -->
+
+    <p style="font-size: 80px;">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-solid fa-user"></i>
     </p>
 
 </body>
